[package]
name = "axumser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
webpki-roots = "0.22.3"
axum = { version = "0.5.1", features = ["ws", "headers"] }
axum-server = "0.4.0"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
postgres = "0.19.2"
